--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
-	
 	<head>
-	
 		<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS" />
 		<meta http-equiv="Content-Script-Type" content="text/javascript" />
 		
@@ -22,6 +20,7 @@
 		<div id="container">
 		<p>
 			<script>
+				// レシピ名を1行に1つ出力
 				for(i = 0; i < recipeName.length; i++){
 					document.write(recipeName[i]);
 					document.write("<br />");
@@ -30,7 +29,5 @@
 		</p>
 			
 		</div>
-					
 	</body>
-	
 </html>
